frontend changes and code for cancelling reservation

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -49,8 +49,9 @@
 <div class="container">
     <h1>Welcome, <span th:text="${userName}"></span>!</h1>
     <p>Choose an option below:</p>
-    <a href="/car-rental/new-reservation" class="button">Make a new Reservation</a>
-    <a href="/car-rental/my-reservations" class="button">See existing Reservations</a>
+    <a href="/new-reservation" class="button">Make a new Reservation</a>
+    <a href="/my-reservations" class="button">See existing Reservations</a>
+    <a href="/logout" class="button">Logout</a>
 </div>
 </body>
 </html>
